# gnosis-ai

./: .gitignore  CLAUDE.md  LICENSE  MASTER_ROADMAP.md  README.md  pyproject.toml
.github/workflows/: bitcoin-timestamp.yml
docs/: HANDOVER.md  PAPER.md  PAPER_17.md  PAPER_18.md  PAPER_19.md  PAPER_PLAN.md  PRODUCT_PLAN.md  ROADMAP.md
gnosis/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  strategy.py
gnosis/api/: claude.py
gnosis/ci/: cascade.py  convergence.py  meta.py  multi_field.py  surveyor.py
gnosis/data/: corpus.py  models.py  store.py  taxonomy.py
gnosis/ea/: validator.py
gnosis/reports/: generator.py
gnosis/verification/: __init__.py  convergence_quality.py  verifier.py
papers/markdown/: Generative_Coupling.md  Infinitography.md  Mathematical_Foundations.md  Mathematical_Foundations_II.md  Structural_Validation.md  The_Convergence_Map.md  The_Convergence_Map_II.md  The_Deeper_Ground.md  The_Generator_Thesis.md  The_Infinite_Ground.md  The_Root_Equation.md  The_SRRP.md  The_Theory_of_Everything_and_Origin.md  Theory_of_Everything.md  Toward_a_Theory_of_Everything.md
results/: TEST_LOG.md
results/test-1-guided/: domain_complexity_theory.json  domain_quantum_foundations.json  domain_thermodynamics.json  report.md  run.json
results/test-2-exploration/: convergence_09364dc014d0.json  convergence_0af0988f685d.json  convergence_189a4a3708ca.json  convergence_1bb5d38f34e4.json  convergence_1d260de6cfc3.json  convergence_5aadf154d2e7.json  convergence_6b0b91dcff77.json  report.md  (+20 more)
scripts/: md_to_pdf.py
taxonomy/: fields.json
(+288 files in other folders)
